# tea

./: .gitignore  CONVENTIONS.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.zed/: settings.json  tasks.json
docs/: index.html
src/: App.css  App.tsx  AskWindow.tsx  ChatUIWindow.tsx  ConfigWindow.tsx  PluginWindow.tsx  PreviewHTMLWindow.tsx  PreviewReactWindow.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  errors.rs  main.rs  window.rs
src-tauri/src/api/: ai_api.rs  artifacts_api.rs  assistant_api.rs  attachment_api.rs  conversation_api.rs  llm_api.rs  mod.rs  system_api.rs
src-tauri/src/api/llm/: anthropic.rs  cohere.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/artifacts/: applescript.rs  mod.rs  powershell.rs
src-tauri/src/db/: assistant_db.rs  conversation_db.rs  llm_db.rs  mod.rs  plugin_db.rs  system_db.rs
src-tauri/src/state/: message_token.rs  mod.rs
src-tauri/src/template_engine/: mod.rs  tests.rs
src/components/: AlertDialog.tsx  AskAIHint.tsx  AskWindowPrepare.tsx  AssistantConfig.css  AssistantConfig.tsx  ChatUIInfomation.tsx  ChatUIToolbar.tsx  ChatUIWindow.css  CircleButton.tsx  CodeBlock.tsx  ConfigForm.tsx  ConfirmDialog.tsx  ConversationList.tsx  ConversationUI.tsx  CustomSelect.tsx  FeatureAssistantConfig.tsx  FileDropArea.tsx  FormDialog.tsx  IconButton.tsx  LLMProviderConfig.css  LLMProviderConfig.tsx  LLMProviderConfigForm.tsx  MessageFileAttachment.tsx  MessageItem.tsx  NewChatComponent.tsx  RoundButton.tsx  SideMenu.css  SideMenu.tsx  SuccessNotification.tsx  Switch.tsx  TagInput.css  TagInput.tsx
src/components/config/: AddAssistantDialog.tsx  AssistantConfig.tsx  EditAssistantDialog.tsx  FeatureAssistantConfig.tsx  LLMProviderConfig.tsx  LLMProviderConfigForm.tsx  TagInputContainer.tsx
src/components/conversation/: ConversationTitle.tsx  InputArea.tsx  MessageWebContent.tsx
src/components/ui/: radio-group.tsx
src/data/: Assistant.tsx  Conversation.tsx
src/hook/: file-drag-drop-hook.ts
src/hooks/: useConversationManager.ts
src/react-markdown/: remarkCustomComponent.ts
src/react-markdown/components/: TipsComponent.tsx
src/styles/: AlertDialog.css  AskWindow.css  AssistantConfig.css  ChatUIWindow.css  CircleButton.css  ConfigForm.css  ConfirmDialog.css  CustomSelect.css  FeatureAssistantConfig.css  FileDropArea.css  FormDialog.css  IconButton.css  LLMProviderConfig.css  LLMProviderConfigForm.css  RoundButton.css  SideMenu.css  SuccessNotification.css  Switch.css  TagInput.css
src/types/: assistant.ts  llm.ts  plugin.d.ts
src/utils/: caretCoordinates.ts  validate.ts
