[package]
name = "ai-assistant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "clipboard-all", "window-maximize", "window-hide", "window-unminimize", "window-unmaximize", "window-show", "window-close", "window-minimize", "window-start-dragging", "system-tray", "shell-open", "global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
get-selected-text = "0.1.6"
config = "0.14.0"
futures = "0.3.30"
chrono = { version = "0.4", features = ["serde"] }
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.23.2"
macos-accessibility-client = "0.0.1"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
