[package]
name = "Tea"
version = "0.0.2"
description = "Chat with LLM use powerful tools"
authors = ["xieisabug"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "path-all", "fs-all", "dialog-all", "clipboard-all", "window-maximize", "window-hide", "window-unminimize", "window-unmaximize", "window-show", "window-close", "window-minimize", "window-start-dragging", "system-tray", "shell-open", "global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11" }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
get-selected-text = "0.1.6"
config = "0.14.0"
futures = "0.3.30"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.5"
thiserror = "1.0.63"
semver = "1.0"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0"
base64 = "0.13.0"
mime_guess = "2.0"
open = "3.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
